--- a/inputitem.html
+++ b/inputitem.html
@@ -6,8 +6,8 @@
 	</head>
 	<body>
 		<div class="logo">
-			<img src="Rnbw_Circle.png">
-			<h1>Gianella Cycles</h1>
+			<img id="imageLogo" src="Rnbw_Circle.png">
+			<h1 id="company_name">Gianella Cycles</h1>
 		</div>
 
 		<nav>
