File structure test

--- a/prototypeKPI/kpi.html
+++ b/prototypeKPI/kpi.html
@@ -14,10 +14,10 @@
 	</div>
 	<div class="menu">
 		<ul>
-		  <li><a class="active" href="#">Home</a></li>
 		  <li><a href="#">KPI</a></li>
-		  <li><a href="#">Input item</a></li>
-		  <li><a href="#">Report</a></li>
+		  <li><a href="../Input screen/inputitem.html">Input item</a></li>
+		  <li><a href="../Reports screen/categorized reports.html">Reports</a></li>
+		  <li><a href="../Settings (user) screen/User.html">Settings</a></li>
 		  <li><a href="#">Logout</a></li>
 		</ul>
 	</div>
