Update all screens

--- a/Input screen/inputitem.html
+++ b/Input screen/inputitem.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<div class="logo">
-			<img id="imageLogo" src="Rnbw_Circle.png">
+			<img id="imageLogo" src="../Images/Rnbw_Circle.png">
 			<h1 id="company_name">Gianella Cycles</h1>
 		</div>
 
