--- a/Login screen/login.html
+++ b/Login screen/login.html
@@ -1,80 +1,16 @@
 <!DOCTYPE html>
 <html>
-<head>
+	<head>
 		<title>login Layout</title>
-		<style>
-		body {
-	color: black;
-	background-position: center;
-	background-attachment: fixed;
-	font-family: Lucida Sans Unicode, Times, serif;
-	line-height: 1.4em;
-	
-}
-header {
-	height: auto;
-}
-nav{
-	border: 10px solid transparent;
-    padding: 15px;
-    border-image: url(../images/border.jpg) 40 round;
-	height:12px;
-	background-color:#2763a1;
-	
-}
-nav ul {
-	margin-left: 120px;	
-	padding: 10px 0px 0px 10px;
-	position:relative;
-	bottom: 45px;
-}
-
-nav li {
-	display: inline;
-	margin-right: 50px;
-}
-
-nav li a {
-	color: #000000;
-	height: 100%;
-	font-style: oblique;
-	border: 2px solid ;
-	display: inline-block;
-  text-decoration: none;
-}
-
-nav li a:hover, nav li a.current {
-	color: red; 
-}
-
-section {
-	float: none;
-	width: 400px;
-	height: 200px;
-	margin-left: auto;
-    margin-right: auto;
-	font-size: larger;
-}
-
-h1{
-	color: #ff0055de;
-	position: relative;
-	background-position: center;
-	text-shadow: 3px 3px #00ffcade;
-	border-style: inset;
-	text-align: left;
-	margin-left: auto;
-    margin-right: auto;
-	height: 100px;
-	width: 800px;
-}
-</style>
+		<link rel="stylesheet" type="text/css" href="login.css">
+		<script type="text/javascript" src="login.js"></script>
 	</head>
-<body>
+	<body>
 		<div>
 			<header>
-				<h1><img src="images/icon.jpg">Gianella Cycles</img></h1>
-				<nav>
+				<h1><img src="../Images/Rnbw_Circle.png">Gianella Cycles</img></h1>
+				
+				<nav><!--
 					<ul>
 					<li><a href="login.html">Home Item</a></li>
 						<li><a href="InputItem.html">Input Item</a></li>
@@ -82,7 +18,7 @@ h1{
 						<li><a href="catering.html">KPI</a></li>
 						<li><a href="about.html">Settings</a></li>
 						<li><a href="contact.html"><img src="images/logout_icon.jpg" width="30" height="30"></a></li>
-					</ul>
+					</ul>-->
 				</nav>
 			</header>
 			<section class="loginBox">
@@ -91,10 +27,10 @@ h1{
 						<legend>Login:</legend>
 						Username: <input type="text" id="user"><br>
 						Password: <input type="text" id="pswd"><br>
-						<input type="button" value="Login" id="lgn">
+						<input type="button" value="Login" id="lgn" onclick="nextPage();">
 					</fieldset>
 				</form>
 			</section>
 		</div>
-</body>
+	</body>
 </html>
