--- a/Reports screen/categorized reports.html
+++ b/Reports screen/categorized reports.html
@@ -7,7 +7,7 @@
 	<body>
 		<header>
 			<div class="header">
-		  		<img src="Rnbw_Circle.png" alt="logo" />
+		  		<img src="../Images/Rnbw_Circle.png" alt="logo" />
 		  		<h3>Gianella Cycles</h3>
 			</div>
 		</header>
