--- a/Settings (user) screen/User.html
+++ b/Settings (user) screen/User.html
@@ -1,61 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>
-		System Users
-	</title>
-	<style>
-		table {
-			width: 40%;
-			margin-left: 10px;
-		}
-		ul {
-			list-style-type: none;
-			margin: 0;
-			padding: 0;
-			overflow: hidden;
-			background-color: black;
-		}
-		li a{
-			float: left;
-			display: block;
-			padding: 18px 30px;
-			color: white;
-			text-align: center;
-			text-decoration: none;
-			
-		}
-		li a:hover {
-			background-color: gray;
-		}
-		#search {
-			margin-top: 10px;
-			margin-right: 10px;
-		}
-		#add {
-		position: absolute;
-		right: 25%;
-		top: 10%;
-		}
-		#logout {
-		float: right;
-		margin-top: 10px;
-		margin-right: 10px;
-		}
-	</style>
+	<title>System Users</title>
+	<link rel="stylesheet" type="text/css" href="User.css">
 </head>
 <body>
 	<div id = "container">
-		<div id = "logo" style = "float:left"><img src = "Rnbw_Circle.png" height = "50px" width = "50px"/></div>
+		<div id = "logo" style = "float:left"><img src = "../Images/Rnbw_Circle.png" height = "50px" width = "50px"/></div>
 		<ul>
-			<li><a href = "">Home</a></li>
-			<li><a href = "">Item Input</a></li>
-			<li><a href = "">KPI</a></li>
-			<li><a href = "">Reports</a></li>
-			<li><a href = "">Users</a></li>
+			<li><a href = "../Input screen/inputitem.html">Item Input</a></li>
+			<li><a href = "../prototypeKPI/kpi.html">KPI</a></li>
+			<li><a href = "../Reports screen/Categorized reports.html">Reports</a></li>
+			<li><a href = "#">Users</a></li>
 			<div id = "logout">
-				<a href = "">
-					<img src = "logout.png" height = "30px" width = "30px"/>
+				<a href = "#">
+					<img src = "../Images/logout.png" height = "30px" width = "30px"/>
 				</a>
 			</div>
 		</ul>
@@ -65,20 +24,21 @@
 				<button type = "button">Search</button>
 			</form>
 		</div>
+		<!--
 		<table>
 			<tr>
 				<th align = "left" colspan = "5">Current Users</th>
 				<td><button type = "button">Add</button></td>
-			</tr>
-			<!--make method? to input a row for each user instead of hardcoding?-->
+			</tr>-->
+			<!--make method? to input a row for each user instead of hardcoding?--><!--
 			<tr>
 				<td>User 1</td>
 				<td>First Name</td>
 				<td>Last Name</td>
 				<td>Role</td>
-				<td align = "right" width = "10%"><button type = "button">Edit</button></td>
+				<td align = "right" width = "10%"><button type = "button">Edit</button></td>-->
 				<!--popup window asking if the owner is sure they want to remove the selected user-->
-				<td width = "10%"><button type = "button">Remove</button></td>
+				<!--<td width = "10%"><button type = "button">Remove</button></td>
 			</tr>
 			<tr>
 				<td>User 2</td>
@@ -103,6 +63,45 @@
 				<td>Role</td>
 				<td align = "right"><button type = "button">Edit</button></td>
 				<td><button type = "button">Remove</button></td>
+			</tr>
+		</table>-->
+		<!-- Version 2-->
+		<table id="userTable">
+			<tr>
+				<td>
+					<h3>User 1</h3>
+					<p>Bobby Harry</p>
+				</td>
+				<td>
+					<h3>User 2</h3>
+					<p>Bobby Harry</p>
+				</td>
+				<td>
+					<h3>User 3</h3>
+					<p>Bobby Harry</p>
+				</td>
+				<td>
+					<h3>User 4</h3>
+					<p>Bobby Harry</p>
+				</td>
+				<td>
+					<h3>User 5</h3>
+					<p>Bobby Harry</p>
+				</td>
+			</tr>
+			<tr>
+				<td>
+					<h3>User 5</h3>
+					<p>Bobby Harry</p>
+				</td>
+				<td>
+					<h3>User 5</h3>
+					<p>Bobby Harry</p>
+				</td>
+				<td>
+					<h3>+</h3>
+					<p>Add new user</p>
+				</td>
 			</tr>
 		</table>
 		<div id = "add">
