--- a/Reports screen/categorized reports.html
+++ b/Reports screen/categorized reports.html
@@ -49,6 +49,14 @@
 
 		<div class="categoryHeader">
 			<h1 id="categoryName">Category Name...</h1>
+			<select id="changeCategory" name="category" value="Change category">
+				<option>Change category</option>
+				<option>Category 1</option>
+				<option>Category 2</option>
+				<option>Category 3</option>
+			</select>
+			<a href="#" id="printLink">Print reports</a>
+			<a href="#" id="exportLink">Export data to CSV</a>
 			<select id="sortOpts" name="sort" value="Sort by">
 				<option>Recent items added</option>
 				<option>Recent items added (reverse)</option>
