Add homepage + link all pages together
A home page was created, and all links in the navigation bars should link to other pages

--- a/Input screen/inputitem.html
+++ b/Input screen/inputitem.html
@@ -12,11 +12,12 @@
 
 		<nav>
 			<ul>
+				<li><a href="../Home screen/home.html">Home</a></li>
 				<li><a href="#">Input item</a></li>
 				<li><a href="../Reports screen/categorized reports.html">Reports</a></li>
 				<li><a href="../prototypeKPI/kpi.html">KPI</a></li>
 				<li><a href="../Settings (user) screen/User.html">Settings</a></li>
-				<li><a href="#">Log out</a></li>
+				<li><a href="../Login screen/login.html">Log out</a></li>
 			</ul>
 		</nav>
 
@@ -39,6 +40,8 @@
 							</tr>
 							<tr>
 								<td><input type="" name="itemName"></td>
+								<td id="addBtn">+</td>
+								<td><input type="" name="addCategory"></td>
 							</tr>
 
 							<tr>
