--- a/Reports screen/categorized reports.html
+++ b/Reports screen/categorized reports.html
@@ -13,11 +13,12 @@
 		</header>
 
 		<div class="topnav">
+			<a href="../Home screen/home.html">Home</a>
 			<a href="../Input screen/inputitem.html">Input items</a>
 			<a href="#">Reports</a>
 			<a href="../prototypeKPI/kpi.html">KPI</a>
 			<a href="../Settings (user) screen/User.html">Settings</a>
-			<a href="#">Logout</a>
+			<a href="../Login screen/login.html">Log out</a>
 
 	  		<div class="search-container">
 	    		<form action="">
