--- a/Settings (user) screen/User.html
+++ b/Settings (user) screen/User.html
@@ -8,12 +8,13 @@
 	<div id = "container">
 		<div id = "logo" style = "float:left"><img src = "../Images/Rnbw_Circle.png" height = "50px" width = "50px"/></div>
 		<ul>
+			<li><a href="../Home screen/home.html">Home</a></li>
 			<li><a href = "../Input screen/inputitem.html">Item Input</a></li>
-			<li><a href = "../prototypeKPI/kpi.html">KPI</a></li>
 			<li><a href = "../Reports screen/Categorized reports.html">Reports</a></li>
+			<li><a href = "../prototypeKPI/kpi.html">KPI</a></li>
 			<li><a href = "#">Users</a></li>
 			<div id = "logout">
-				<a href = "#">
+				<a href = "../Login screen/login.html">
 					<img src = "../Images/logout.png" height = "30px" width = "30px"/>
 				</a>
 			</div>
