--- a/prototypeKPI/kpi.html
+++ b/prototypeKPI/kpi.html
@@ -14,11 +14,12 @@
 	</div>
 	<div class="menu">
 		<ul>
-		  <li><a href="#">KPI</a></li>
-		  <li><a href="../Input screen/inputitem.html">Input item</a></li>
-		  <li><a href="../Reports screen/categorized reports.html">Reports</a></li>
-		  <li><a href="../Settings (user) screen/User.html">Settings</a></li>
-		  <li><a href="#">Logout</a></li>
+			<li><a href="../Home screen/home.html">Home</a></li>
+			<li><a href="../Input screen/inputitem.html">Input item</a></li>
+			<li><a href="../Reports screen/categorized reports.html">Reports</a></li>
+			<li><a href="#">KPI</a></li>
+			<li><a href="../Settings (user) screen/User.html">Settings</a></li>
+			<li><a href="../Login screen/login.html">Log out</a></li>
 		</ul>
 	</div>
 
