Update input item form

--- a/Input screen/inputitem.html
+++ b/Input screen/inputitem.html
@@ -39,7 +39,13 @@
 								<td><label>Category</label></td>
 							</tr>
 							<tr>
-								<td><input type="" name="itemName"></td>
+								<td>
+									<select>
+										<option>Select a category</option>
+										<option>Bikes</option>
+										<option>Tubes</option>		
+									</select>
+								</td>
 								<td id="addBtn">+</td>
 								<td><input type="" name="addCategory"></td>
 							</tr>
