Update navigation bar for home + input screens

--- a/Input screen/inputitem.html
+++ b/Input screen/inputitem.html
@@ -39,13 +39,7 @@
 								<td><label>Category</label></td>
 							</tr>
 							<tr>
-								<td>
-									<select>
-										<option>Select a category</option>
-										<option>Bikes</option>
-										<option>Tubes</option>		
-									</select>
-								</td>
+								<td><input type="" name="itemName"></td>
 								<td id="addBtn">+</td>
 								<td><input type="" name="addCategory"></td>
 							</tr>
