Update navigation bar for KPI screen

--- a/prototypeKPI/kpi.html
+++ b/prototypeKPI/kpi.html
@@ -10,8 +10,8 @@
 <body>
 	<div class="header">
   		<img src="unnamed.jpg" />
-  		<h1>ianella cycles</h1>
-	</div>
+  		<h1>Gianella cycles</h1>
+	</div><!--
 	<div class="menu">
 		<ul>
 			<li><a href="../Home screen/home.html">Home</a></li>
@@ -21,7 +21,18 @@
 			<li><a href="../Settings (user) screen/User.html">Settings</a></li>
 			<li><a href="../Login screen/login.html">Log out</a></li>
 		</ul>
-	</div>
+	</div>-->
+
+	<nav>
+		<ul>
+			<li><a href="../Home screen/home.html">Home</a></li>
+			<li><a href="#">Input item</a></li>
+			<li><a href="../Reports screen/categorized reports.html">Reports</a></li>
+			<li><a href="../prototypeKPI/kpi.html">KPI</a></li>
+			<li><a href="../Settings (user) screen/User.html">Settings</a></li>
+			<li><a href="../Login screen/login.html">Log out</a></li>
+		</ul>
+	</nav>
 
 	<div class="wrapper">
 	<form class="form">
