Modify look of login screen

--- a/Login screen/login.html
+++ b/Login screen/login.html
@@ -21,6 +21,28 @@
 					</ul>-->
 				</nav>
 			</header>
+
+			<div class="loginBox">
+				<form id="loginForm">
+					<table id="loginTable">
+						<tr>
+							<td>Username:</td>
+						</tr>
+						<tr>
+							 <td><input type="text" id="user"></td>
+						</tr>
+						<tr>
+							<td>Password</td>
+						</tr>
+						<tr>
+							<td><input type="text" id="pswd"></td>
+						</tr>
+					</table>
+					<br>
+					<input type="button" value="Login" id="lgn" onclick="nextPage();">
+				</form>
+			</div>
+			<!--
 			<section class="loginBox">
 				<form>
 					<fieldset>
@@ -30,7 +52,6 @@
 						<input type="button" value="Login" id="lgn" onclick="nextPage();">
 					</fieldset>
 				</form>
-			</section>
-		</div>
+			</section>-->
 	</body>
 </html>
