--- a/Reports screen/categorized reports.html
+++ b/Reports screen/categorized reports.html
@@ -15,8 +15,8 @@
 		<nav>
 			<ul>
 				<li><a href="../Home screen/home.html">Home</a></li>
-				<li><a href="#">Input item</a></li>
-				<li><a href="../Reports screen/categorized reports.html">Reports</a></li>
+				<li><a href="../Input Screen/inputitem.html">Input item</a></li>
+				<li><a href="#">Reports</a></li>
 				<li><a href="../prototypeKPI/kpi.html">KPI</a></li>
 				<li><a href="../Settings (user) screen/User.html">Settings</a></li>
 				<li><a href="../Login screen/login.html">Log out</a></li>
